overflow fixed

--- a/Idiot/idiot.css
+++ b/Idiot/idiot.css
@@ -1,53 +1,39 @@
+:root {
+    font-size: 1vw;
+}
+
 body{
     display: flex;
-    align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    align-items: center;
+    height: 90vh;
+    overflow-wrap: initial;
 }
 .form{
+    text-align: center;
     background-color: lightgrey;
     display: inline-block;
-    padding: 10px;
-    border: 2px solid black;
-    right: 10px;
+    font-size: 1.3rem;
+    padding: 2rem;
+    border: 0.2rem solid black;
+    right: 1rem;
 }
 .yes{
-    margin: 10px;
+    margin: 1rem;
+    font-size: 1.3rem;
+    padding: 0.5rem;
 }
 .no{
-    margin: 10px;
+    margin: 1rem;
+    font-size: 1.3rem;
+    padding: 0.5rem;
 }
 .try{
     text-align: center;
     color: red;
 }
 @media (max-width: 1080px) {
-    p{
-        font-size: 100px;
-        padding: 50px;
-        margin-bottom: 0;
-    }
-    .form{
-        text-align: center;
-        border: 10px solid black;
-    }
-    .try{
-        font-size: 80px;
-        text-align: center;
-        color: red;
-        margin-bottom: 50px;
-    }
-    .yes{
-        font-size: 80px;
-        width: 200px;
-        height: 110px;
-        margin: 0px 125px 125px 125px;
-        border: 3px solid black;
-    }
-    .no{
-        font-size: 80px;
-        width: 200px;
-        margin: 0px 125px 125px 125px;
-        border: 3px solid black;
+    :root {
+        font-size: 1.6vh;
     }
 }
